[package]
name = "totp-tool"
version = "0.0.1"
authors = ["Matthew Edgren"]
repository = "https://github.com/msedgren/totp-tool"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
base32 = "0.4.0"
hex = "0.4.3"
